--- a/gradle.properties
+++ b/gradle.properties
@@ -7,16 +7,16 @@ pluginRepositoryUrl = https://github.com/panli1988/coco-builder
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 213
-pluginUntilBuild = 223.*
+pluginSinceBuild = 222
+pluginUntilBuild = 222.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2021.3.3
+platformType = IU
+platformVersion = 2022.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins =
+platformPlugins = com.intellij.database, com.intellij.java
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.6
@@ -28,3 +28,5 @@ kotlin.stdlib.default.dependency = false
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 # suppress inspection "UnusedProperty"
 org.gradle.unsafe.configuration-cache = true
+org.gradle.java.home = D:\\Program Files\\Java\\jdk-17
+org.gradle.unsafe.configuration-cache-problems=warn
