--- a/gradle.properties
+++ b/gradle.properties
@@ -28,5 +28,5 @@ kotlin.stdlib.default.dependency = false
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 # suppress inspection "UnusedProperty"
 org.gradle.unsafe.configuration-cache = true
-org.gradle.java.home = D:\\Program Files\\Java\\jdk-17
+#org.gradle.java.home = D:\\Program Files\\Java\\jdk-17
 org.gradle.unsafe.configuration-cache-problems=warn
