修改版本号，添加说明

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -22,6 +22,10 @@
 
 
     <change-notes><![CDATA[
+        <h2>0.0.3</h2>
+        <ul>
+            <li>Fix errors in the generated xml file.</li>
+        </ul>
         <h2>0.0.2</h2>
         <ul>
             <li>Modify Template File.</li>
